# ai-cookbook

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  config.toml.example  justfile  node_modules  plan.md  ruff.toml  spec.md  todo.md  vercel.json
agents/agent_steering_python/: README.md  pyproject.toml  start_workflow.py  worker.py
agents/agent_steering_python/activities/: llm_call.py
agents/agent_steering_python/tests/: test_workflow.py
agents/agent_steering_python/workflows/: agent_steering_workflow.py
agents/agentic_loop_tool_call_claude_python/: .gitignore  README.md  claude_test.py  pyproject.toml  start_workflow.py  worker.py
agents/agentic_loop_tool_call_claude_python/activities/: claude_responses.py  tool_invoker.py
agents/agentic_loop_tool_call_claude_python/helpers/: tool_helpers.py
agents/agentic_loop_tool_call_claude_python/tests/: test_tool_helpers.py  test_tools.py  test_workflow.py
agents/agentic_loop_tool_call_claude_python/tools/: README.md  __init__.py  get_location.py  get_weather.py  random_stuff.py
agents/agentic_loop_tool_call_claude_python/workflows/: agent.py
agents/agentic_loop_tool_call_gemini_python/: .gitignore  CLAUDE.md  README.md  pyproject.toml  start_workflow.py  worker.py
agents/agentic_loop_tool_call_gemini_python/activities/: __init__.py  gemini_chat.py  tool_invoker.py
agents/agentic_loop_tool_call_gemini_python/agent_config/: __init__.py  prompts.py
agents/agentic_loop_tool_call_gemini_python/helpers/: __init__.py  tool_helpers.py
agents/agentic_loop_tool_call_gemini_python/tools/: __init__.py  get_location.py  get_weather.py
agents/agentic_loop_tool_call_gemini_python/workflows/: __init__.py  agent.py
agents/agentic_loop_tool_call_openai_python/: README.md  pyproject.toml  start_workflow.py  worker.py
agents/agentic_loop_tool_call_openai_python/activities/: openai_responses.py  tool_invoker.py
agents/agentic_loop_tool_call_openai_python/helpers/: tool_helpers.py
agents/agentic_loop_tool_call_openai_python/tests/: test_tool_helpers.py  test_tools.py  test_workflow.py
agents/agentic_loop_tool_call_openai_python/tools/: README.md  __init__.py  get_location.py  get_weather.py  random_stuff.py
agents/agentic_loop_tool_call_openai_python/workflows/: agent.py
agents/claude_agent_sdk_python/: README.md  models.py  pyproject.toml  start_workflow.py  worker.py
agents/claude_agent_sdk_python/activities/: agent_executor.py
agents/claude_agent_sdk_python/tests/: test_activity.py  test_workflow.py
agents/claude_agent_sdk_python/workflows/: agent.py
agents/google_genai_sdk_python/: README.md  pyproject.toml  run_gemini_agent.py  setenv.example  setenv.sh  start_workflow.py  worker.py
agents/google_genai_sdk_python/activities/: gemini_responses.py  tool_invoker.py
agents/google_genai_sdk_python/helpers/: tool_helpers.py
agents/google_genai_sdk_python/tools/: __init__.py  get_location.py  get_tools.py  get_weather.py  random_stuff.py
agents/google_genai_sdk_python/workflows/: agent.py
agents/guardrails_hard_rules_python/: README.md  pyproject.toml  start_workflow.py  worker.py
agents/guardrails_hard_rules_python/activities/: classify.py
agents/guardrails_hard_rules_python/guardrails/: hard_rules.py
agents/guardrails_hard_rules_python/models/: signals.py  verdict.py
agents/guardrails_hard_rules_python/tests/: test_guardrails.py
agents/guardrails_hard_rules_python/workflows/: classify_workflow.py
agents/human_in_the_loop_python/: README.md  pyproject.toml  send_approval.py  start_workflow.py  worker.py
agents/human_in_the_loop_python/activities/: __init__.py  execute_action.py  notify_approval_needed.py  openai_responses.py
agents/human_in_the_loop_python/models/: __init__.py  agent_instructions.py  approval.py  models.py
agents/human_in_the_loop_python/tests/: test_models.py  test_workflow.py
agents/human_in_the_loop_python/workflows/: __init__.py  human_in_the_loop_workflow.py
agents/multi_agent_adk_python/: README.md  _activity_tool.py  pyproject.toml  start_workflow.py  worker.py
agents/multi_agent_adk_python/activities/: tools.py
agents/multi_agent_adk_python/models/: models.py
agents/multi_agent_adk_python/tests/: test_workflow.py  (+1 more)
agents/openai_agents_sdk_python/: README.md  pyproject.toml  start_workflow.py  worker.py
agents/pydantic_ai_docs_bot_python/: .env.example  README.md  agents.py  pyproject.toml  start_qa.py  start_workflow.py  worker.py  workflow.py
agents/pydantic_sdk_python/: .env.example  .gitignore  README.md  agents.py  pyproject.toml  start_workflow.py  worker.py  workflow.py
agents/strands_agents_python/: README.md  pyproject.toml  start_workflow.py  worker.py
agents/strands_agents_sdk_python/: README.md  pyproject.toml  start_workflow.py  worker.py
agents/subagent_supervisor_python/: README.md  pyproject.toml  start_workflow.py  worker.py
agents/tool_call_openai_python/: README.md  pyproject.toml  start_workflow.py  worker.py
foundations/claim_check_pattern_python/: README.md  claim_check_codec.py  claim_check_plugin.py  codec_server.py  pyproject.toml  start_workflow.py  worker.py
foundations/hello_world_litellm_python/: README.md  pyproject.toml  start_workflow.py  worker.py
foundations/http_retry_enhancement_python/: README.md  pyproject.toml  start_workflow.py
foundations/structured_output_openai_responses_python/: README.md  pyproject.toml  start_workflow.py  worker.py
hello_world/basic_openai_agent/: README.md  pyproject.toml  start_workflow.py  worker.py
hello_world/structured_output_openai_python/: pyproject.toml  start_workflow.py
mcp/hello_world_durable_mcp_server/: README.md  claude_desktop_config.json  pyproject.toml  run_weather_worker.py  weather_activities.py  weather_worker.py  weather_workflows.py  worker.py
ml_ops/durable_training/: README.md  bert_activities.py  custom_types.py  pyproject.toml  starter.py  worker.py  workflows.py
ml_ops/hyperparam_optimization/: README.md  bert_activities.py  custom_types.py  pyproject.toml  starter.py  training_worker.py  worker.py  workflows.py
(+259 files in other folders)
