[project]
name = "cookbook-agent-steering-python"
version = "0.1"
description = "An agentic loop that accepts out-of-band user guidance mid-run. A steer signal folds new context into the next model call; an interrupt signal cancels the in-flight call and replaces the prompt."
authors = [{ name = "Temporal Technologies Inc", email = "sdk@temporal.io" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "temporalio>=1.15.0,<2",
    "anthropic>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
