[project]
name = "cookbook-agentic-loop-claude-python"
version = "0.1"
description = "Agentic loop with Claude (Anthropic) and tool calling"
authors = [{ name = "Temporal Technologies Inc", email = "sdk@temporal.io" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "temporalio>=1.15.0,<2", 
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0"]
