[project]
name = "cookbook-agentic-loop-claude-python"
version = "0.1"
description = "Agentic loop with Claude (Anthropic) and tool calling"
authors = [{ name = "Temporal Technologies Inc", email = "sdk@temporal.io" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = "MIT"
dependencies = [
    "temporalio>=1.15.0,<2", 
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
