[project]
name = "cookbook-basic-python"
version = "0.1"
description = "Basic example"
authors = [{ name = "Temporal Technologies Inc", email = "sdk@temporal.io" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "temporalio>=1.15.0,<2", 
    "openai>=1.40.0",
    "numpy>=1.26",
    "requests>=2.32.3"]
