[project]
name = "agentic-loop-gemini"
version = "0.1"
description = "Agentic loop example using Gemini"
authors = [{ name = "Temporal Technologies Inc", email = "sdk@temporal.io" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "temporalio>=1.15.0,<2",
    "google-generativeai>=0.7.2",
    "httpx>=0.27.0",
    "numpy>=1.26"]
