[project]
name = "cookbook-guardrails-hard-rules-python"
version = "0.1"
description = "Post-LLM guardrail layer using deterministic hard rules to override LLM verdicts."
authors = [{ name = "Temporal Technologies Inc", email = "sdk@temporal.io" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = "MIT"
dependencies = [
    "temporalio>=1.15.0,<2",
    "anthropic>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
