[project]
name = "human-in-the-loop-python"
version = "0.1.0"
description = "Human-in-the-loop AI agent with Temporal"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "temporalio>=1.8.0",
    "openai>=1.59.6",
    "pydantic>=2.10.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "activities", "workflows"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
