[project]
name = "multi-agent-adk-python"
version = "0.1.0"
description = "Multi-agent orchestration with Google ADK and Temporal — parallel + sequential agents inside a workflow"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "temporalio[google-adk]>=1.25.0,<2",
    "google-adk>=1.0.0",
    "pydantic>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "activities", "workflows"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
