[project]
name = "cookbook-strands-plugin-agent"
version = "0.1"
description = "Durable Agent using the Strands Agents SDK Temporal plugin with AWS Bedrock and an MCP server"
authors = [{ name = "Temporal Technologies Inc", email = "sdk@temporal.io" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "temporalio[strands-agents]>=1.28.0,<2",
    "requests>=2.31.0",
    # Required by the AWS SSO ("aws login") credential provider.
    "botocore[crt]>=1.34.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
]

[tool.setuptools]
py-modules = []  # No modules to install, just dependencies

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
