[project]
name = "cookbook-strands-plugin-agent"
version = "0.1"
description = "Durable Agent using the Strands Agents SDK Temporal plugin with AWS Bedrock and an MCP server"
authors = [{ name = "Temporal Technologies Inc", email = "sdk@temporal.io" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "temporalio[strands-agents]>=1.28.0,<2",
    "requests>=2.31.0",
    # Required by the AWS SSO ("aws login") credential provider.
    "botocore[crt]>=1.34.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.26.0",
    "pytest-timeout>=2.4.0",
]

[tool.setuptools]
py-modules = []  # No modules to install, just dependencies

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
