[project]
name = "cookbook-strands-bedrock-agent"
version = "0.1"
description = "Durable Agent using Strands Agents SDK with AWS Bedrock"
authors = [{ name = "Temporal Technologies Inc", email = "sdk@temporal.io" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "temporalio>=1.7.0,<2",
    "strands-agents>=0.1.0",
    "strands-agents-tools>=0.1.0",
    "boto3>=1.34.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools]
py-modules = []  # No modules to install, just dependencies

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]