[project]
name = "cookbook-subagent-supervisor-python"
version = "0.1"
description = "A supervisor agent delegates a focused task to a child-workflow subagent through a tool call, then folds the subagent's result back into its own loop."
authors = [{ name = "Temporal Technologies Inc", email = "sdk@temporal.io" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = [
    "temporalio>=1.15.0,<2",
    "anthropic>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
