[project]
name = "claim-check-pattern-python"
version = "0.1"
description = "Claim Check pattern implementation for handling large payloads in Temporal"
authors = [{ name = "Temporal Technologies Inc", email = "sdk@temporal.io" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = "MIT"
dependencies = [
    "temporalio>=1.19.0,<2",
    "boto3>=1.34.0",
    "aioboto3>=12.0.0",
    "requests>=2.33.0",
    "aiohttp>=3.13.3",
    "openai>=1.44.0",
    "rank-bm25>=0.2.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
    "pytest-asyncio>=0.26.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
