[project]
name = "cookbook-basic-python-litellm"
version = "0.1"
description = "Basic example using LiteLLM"
authors = [{ name = "Temporal Technologies Inc", email = "sdk@temporal.io" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = "MIT"
dependencies = [
    "temporalio>=1.15.0,<2",
    "litellm>=1.41.10,<2",
    "google-auth>=2.0.0,<3",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest-asyncio",
    "pytest-timeout>=2.4.0",
    "pytest>=8.4.1",
]
