[project]
name = "deep-research-basic-openai-python"
version = "0.1"
description = "Deep research example using OpenAI Responses API with Temporal workflows"
authors = [{ name = "Temporal Technologies Inc", email = "sdk@temporal.io" }]
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = "MIT"
dependencies = [
    "temporalio>=1.15.0,<2",
    "openai>=1.40.0",
    "pydantic[email]>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-timeout>=2.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py39"