[project]
name = "weather"
version = "0.1.0"
description = "A simple MCP weather server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "temporalio>=1.11.1",
    # Elicitation support requires FastMCP 2.10.0+
    "fastmcp>=2.10.0",
    "pydantic>=2.6.0",
    "litellm>=1.48.0",
    "python-dotenv>=1.0.1",
    "playwright>=1.46.0",
    "beautifulsoup4>=4.12.2",
    "trafilatura>=1.8.0",
    "weasyprint>=61.0.0",
    "markdown>=3.4.0",
    "tabulate>=0.9.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "mcp_clients",
  "mcp_servers",
  "shared",
  "workflows",
]