[project]
name = "weather"
version = "0.1.0"
description = "A simple MCP weather server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "temporalio>=1.11.1",
    # Elicitation support requires FastMCP 2.10.0+
    "fastmcp>=2.10.0",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "mcp_servers",
  "workflows",
  "acitivities",
]