[project]
name = "recipe-lint"
version = "0.1.0"
description = "Lints Temporal AI Cookbook recipes for structural, layout, and code conventions."
requires-python = ">=3.11"
# This toolkit is a validator: the tools it runs (ruff, mypy, pytest) are its
# real requirements, not dev extras. ruff is pinned so the linter and the
# `--fix` autofixer use the same ruff against the repo-root ruff.toml (which
# ruff discovers by walking up from a recipe) and never disagree.
dependencies = [
    "ruff>=0.15,<0.16",
    "mypy",
    "pytest>=8",
]

[project.scripts]
recipe-lint = "recipe_lint.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recipe_lint"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
