[project]
name = "recipe-scaffold"
version = "0.1.0"
description = "Deterministically scaffolds a Temporal AI Cookbook recipe from a proposal card (Jinja templates)."
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6",
    "jsonschema>=4",
]

[project.scripts]
recipe-scaffold = "recipe_scaffold.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff",
    "mypy",
    "types-pyyaml",
    "types-jsonschema",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recipe_scaffold"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
