[project]
name = "recipe-scaffold"
version = "0.1.0"
description = "Deterministically scaffolds a Temporal AI Cookbook recipe from a proposal card (Jinja templates)."
requires-python = ">=3.11"
# This toolkit is a validator/generator: the tools it relies on (ruff, mypy,
# pytest, type stubs) are real requirements, not dev extras.
dependencies = [
    "jinja2>=3.1",
    "pyyaml>=6",
    "jsonschema>=4",
    "ruff>=0.15,<0.16",
    "mypy",
    "pytest>=8",
    "types-pyyaml",
    "types-jsonschema",
]

[project.scripts]
recipe-scaffold = "recipe_scaffold.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recipe_scaffold"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.pytest.ini_options]
pythonpath = ["src"]
